name:                complexityDistributed
version:             0.1.0.0
synopsis:            Calcul using distributed paradigm
description:         Please see README.md
license:             BSD3
license-file:        LICENSE
author:              Stephen Barrett
maintainer:          Stephen.Barrett@tcd.ie
copyright:           2016
category:            test
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , PrimeFactors
                     , BashCommand
  build-depends:       base >= 4.7 && < 5                     
                     , network-transport-tcp
                     , distributed-process
                     , distributed-process-simplelocalnet
                    , process
  default-language:    Haskell2010

executable complexityDistributed-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , complexityDistributed
  default-language:    Haskell2010
