name:                Client
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/esjmb/use-haskell-client#readme
license:             BSD3
license-file:        LICENSE
author:              Stephen Barrett
maintainer:          Stephen.Barrett@tcd.ie
copyright:           Copyright (C) 2016
category:            test
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , API
                     , APIClient
  build-depends:       base >= 4.7 && < 5
                     , servant
                     , mtl
                     , cache
                     , clock
                     , time
                     , bson-generic  
                     , servant-client  
                     , servant-server 
                     , aeson
                     , http-client
                     , optparse-applicative
                     , cabal-file-th >= 0.2.4
                     , pretty
                     , Cabal
                     , ansi-terminal
                     , git-embed

  default-language:    Haskell2010

executable Client-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Client
  default-language:    Haskell2010
